# PicoAcornSystem1

./: CMakeLists.txt  README.md  main.c
clock-source/: build.sh  clock.asm  clock.lst  readme.txt
lib/lcd/: LCD_Driver.h  LCD_GUI.c  LCD_GUI.h  LCD_Touch.c  LCD_Touch.h
system1/: 6502.c  CMakeLists.txt  clockdemo.h  main.h  monitorrom.h  system1.c
